5/2/2010
	- Rewrite DNSSEC support.

4/15/2010
	- Fix a hang that could occur when using the dnsjava service provider
	  on Windows (initial patch from <jy123@users.sourceforge.net>).

11/21/2009
	- 2.0.8 released

11/10/2009
	- Fix the conversion of NSEC/NSEC3 bitmaps into wire format.
	  (Klaus Malorny <Klaus.Malorny@knipp.de>, also reported by
	  Tom <808131@gmail.com>).

10/01/2009
	- Properly initialize the Date objects used in RRSIG (and other)
	  records, so that any unused fields are cleared.
	  (Klaus Malorny <Klaus.Malorny@knipp.de>)

9/25/2009
	- 2.0.7 released
	- Add support for detecting the configured nameservers on the Android
	  platform.  (patch from Arnt Gulbrandsen <arnt@gulbrandsen.priv.no>)

9/16/2009
	- When determining the nameservers to use, if the
	  sun.net.dns.ResolverConfiguration class returns an empty list, ignore
	  it. (based on an anonymous patch).
	- Make the Name, Record (and all subclasses), RRset, and Zone classes
	  implement Serializable.
	  (based on a patch from Patrick <psp294@users.sourceforge.net>)

9/15/2009
	- Add a constant for the REVOKE DNSKEY flag.
	  (patch from Wolfgang Nagele <dreamguard@users.sourceforge.net>)
	- ReverseMap.fromAddress(String) should support both IPv4 and IPv6
	  addresses.
	  (reported by Stephan Fuhrmann <stfu1und1@users.sourceforge.net>)

8/08/2009
	- The escaping code for text strings should not escape semicolons.

6/23/2009
	- DNSSEC signature validation incorrectly used the TTL of the records
	  being verified, not the original TTL from the RRSIG record, which
	  caused failures when verifying records returned by a caching server.
	  (reported by Samuel Benz <samuel.benz@switch.ch>)

6/15/2009
	- Change the ResolverConfig.refresh() method to only synchronize the
	  assignment to currentConfig, not the code which determines the new
	  configuration.

6/12/2009
	- The TSIG verification routines (TSIG.verify,
	  TSIG.StreamVerifier.verify() now update the Message object with the