@@ -1,3 +1,7 @@
+5/6/2010
+	- Add support for building an OSGi bundle (patch from
+	  Markus Alexander Kuppe <lemmster@users.sourceforge.net>).
+
 5/2/2010
 	- Rewrite DNSSEC support.
 
